mType/tests/testFiles/import/pass/modules/SelectiveModule.mt
class SelectiveClass1 {
    fun test1(): String {
        return "Selective1";
    }
}

class SelectiveClass2 {
    fun test2(): String {
        return "Selective2";
    }
}

class SelectiveClass3 {
    fun test3(): String {
        return "Selective3";
    }
}
