mType/tests/testFiles/import/error/modules/CollisionModule2.mt
class Collision {
    fun getSource(): String {
        return "Module2";
    }
}
